--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-        <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" type="text/css" />
-        <link rel="stylesheet" href="/static/main.css" type="text/css" />
+        <link rel="stylesheet" href="static/main.css" type="text/css" />
     </head>
     <body>
      <div class="container">
@@ -92,12 +91,9 @@
     
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='data.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='interactive.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
-    <script type="text/javascript" src="/static/data.js"></script>
-    <script type="text/javascript" src="/static/index.js"></script>
-    <script type="text/javascript" src="/static/interactive.js"></script>
+    <script type="text/javascript" src="static/data.js"></script>
+    <script type="text/javascript" src="static/index.js"></script>
+    <script type="text/javascript" src="static/interactive.js"></script>
     
     </body>
 </html>
